methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:20: error: value lightGrey is not a member of object java.awt.Color
  centre(Color.lightGrey,Color.black)
               ^