methods.picture.PatternPicture.scala.code
override def run() {
  def centre(c1:Color,c2:Color){
    avance()
    setCouleurBrosse(c1:Color)
    baisseBrosse()
    avance()
    setCouleurBrosse(c2:Color)
    leveBrosse()
    recule(2)
  }
  def cote(c3:Color,c4:Color){
    setCouleurBrosse(c3:Color)
    baisseBrosse()
    leveBrosse()
    avance(3)
    setCouleurBrosse(c4:Color)
    leveBrosse()
    recule(3)
  }
  centre(Color.lightGrey,Color.black)
}